# simplevoip

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  deploy_guide.md  docker-compose.yml  verify_rooms.py
client/: client.js  home.html  index.html  room.html  style.css
client/css/: style.css
client/js/: client.js
server/: config.hpp  main.cpp  room_manager.hpp
